# memkvinC

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
benchmark/: CMakeLists.txt  bitcask_benchmark.cpp
include/: LibExport.hpp
include/bitcask/: Bitcask.hpp  Define.hpp  Logger.hpp  Setting.hpp  Type.hpp
src/: ActiveFile.cpp  ActiveFile.hpp  ActiveMap.cpp  ActiveMap.hpp  Bitcask.cpp  BitcaskImpl.cpp  BitcaskImpl.hpp  CRC32.hpp  Compact.cpp  Compact.hpp  File.cpp  File.hpp  Hint.hpp  Logger.cpp  Record.cpp  Record.hpp  RecordMap.cpp  RecordMap.hpp  Setting.cpp  StableFile.cpp  StableFile.hpp
src/utils/: StringCast.hpp
test/: ActiveMap_test.cpp  Bitcask_test.cpp  CMakeLists.txt  RecordMap_test.cpp  Record_test.cpp  active_map_test.cpp  bitcask_benchmark_test.cpp  bitcask_test.cpp  init_from_existed_db_test.cpp  record_map_test.cpp  record_test.cpp
